# TensorRT-YOLO

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.cn.md  README.en.md  README.md  detect.cpp  detect.py  ptq_calibration.py  pyproject.toml  requirements.txt  xmake.lua
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1_bug-report.yml  2_feature-request.yml  3_documentation-issue.yml  4_ask-a-question.yml  5_others.yml
.github/workflows/: python-publish.yml
cmake/: tensorrt-yolo-config.cmake.in
demo/VideoPipe/: CMakeLists.txt  README.en.md  README.md  xmake.lua
demo/VideoPipe/src/: main.cpp  vp_trtyolo_detector.cpp  vp_trtyolo_detector.h
demo/detect/: CMakeLists.txt  README.en.md  README.md  detect.cpp  detect.py  xmake.lua
deploy/: model.cpp  model.hpp  option.hpp  pybind.cpp  result.hpp
deploy/core/: buffer.cpp  core.cpp  core.hpp  macro.hpp
deploy/infer/: backend.cpp  backend.hpp  warpaffine.cu  warpaffine.hpp
deploy/utils/: utils.cpp  utils.hpp
docs/cn/: build_and_install.md  build_trt_custom_plugin.md  model_export.md
docs/en/: build_and_install.md  build_trt_custom_plugin.md  model_export.md
examples/VideoPipe/: CMakeLists.txt  README.en.md  README.md  xmake.lua
examples/VideoPipe/src/: main.cpp  vp_trtyolo_detector.cpp  vp_trtyolo_detector.h
examples/classify/: CMakeLists.txt  README.en.md  README.md  classify.cpp  classify.py  labels.txt  xmake.lua
examples/detect/: CMakeLists.txt  README.en.md  README.md  detect.cpp  detect.py  xmake.lua
examples/mutli_thread/: CMakeLists.txt  README.en.md  README.md  mutli_thread.cpp  mutli_thread_process.py
examples/nndeploy/: README.en.md  README.md  TensorRT-YOLO.json  trtyolo_plugin.py
examples/obb/: CMakeLists.txt  README.en.md  README.md  obb.cpp  obb.py  xmake.lua
examples/pose/: CMakeLists.txt  README.en.md  README.md  pose.cpp  pose.py  xmake.lua
examples/segment/: CMakeLists.txt  README.en.md  README.md  segment.cpp  segment.py  xmake.lua
include/: common.hpp  cuda_utils.hpp  detection.cu  detection.hpp
include/deploy/core/: buffer.hpp  core.hpp  macro.hpp  memory.hpp  option.hpp  tensor.hpp  types.hpp
include/deploy/infer/: backend.hpp  inference.hpp  model.hpp  result.hpp
include/deploy/utils/: utils.hpp
include/deploy/vision/: cudaWarp.hpp  detection.hpp  inference.hpp  result.hpp  visualize.hpp  warp_affine.hpp  warpaffine.hpp
modules/plugin/: CMakeLists.txt
modules/plugin/common/: bboxUtils.h  checkMacrosPlugin.cpp  checkMacrosPlugin.h  common.cu  plugin.cpp  plugin.h  vfcCommon.cpp  vfcCommon.h
modules/plugin/efficientIdxNMSPlugin/: README.md  efficientIdxNMSInference.cu  efficientIdxNMSParameters.h  efficientIdxNMSPlugin.cpp  efficientIdxNMSPlugin.h
modules/plugin/efficientRotatedNMSPlugin/: efficientRotatedNMSInference.h  efficientRotatedNMSParameters.h  efficientRotatedNMSPlugin.cpp  efficientRotatedNMSPlugin.h
modules/trtyolo/: CMakeLists.txt
modules/trtyolo/binding/: trtyolo.cpp
modules/trtyolo/core/: buffer.cpp  buffer.hpp  core.cpp  core.hpp
modules/trtyolo/infer/: backend.cpp  backend.hpp  letterbox.cu  letterbox.hpp  trtyolo.cpp  trtyolo.hpp  warpaffine.cu  warpaffine.hpp
modules/trtyolo/utils/: common.cpp  common.hpp
plugin/: CMakeLists.txt  xmake.lua
plugin/common/: bboxUtils.h  checkMacrosPlugin.cpp  checkMacrosPlugin.h  common.cu  plugin.cpp  plugin.h  vfcCommon.cpp  vfcCommon.h
plugin/efficientIdxNMSPlugin/: efficientIdxNMSInference.cu  efficientIdxNMSInference.cuh  efficientIdxNMSInference.h  efficientIdxNMSPlugin.cpp  efficientIdxNMSPlugin.h
plugin/efficientPoseNMSPlugin/: README.md  efficientPoseNMSInference.cu  efficientPoseNMSInference.cuh  efficientPoseNMSInference.h  efficientPoseNMSParameters.h  efficientPoseNMSPlugin.cpp  efficientPoseNMSPlugin.h
plugin/efficientRotatedNMSPlugin/: README.md  efficientRotatedNMSInference.cu  efficientRotatedNMSInference.cuh  efficientRotatedNMSInference.h  efficientRotatedNMSPlugin.cpp  efficientRotatedNMSPlugin.h
python/: pyproject.toml
python/export/ppyoloe/: export.py  graphsurgeon.py  trt_graphsurgeon.py  trt_helper.py
python/export/yolov5/: common.py  export.py  nms.py  utils.py
python/export/yolov8/: common.py  export.py  nms.py
python/export/yolov9/: common.py  export.py
python/infer/: __init__.py  batcher.py  preprocess.cu  yolo.py
python/tensorrt_yolo/: c_lib_wrap.py.in  cli.py
python/tensorrt_yolo/export/: __init__.py  head.py
python/tensorrt_yolo/infer/: __init__.py  model.py  timer.py  utils.py
python/utils/: __init__.py  general.py  structs.py  utils.py
source/deploy/core/: buffer.cpp  core.cpp  memory.cpp  tensor.cpp  types.cpp
source/deploy/infer/: backend.cpp  inference.cpp  model.cpp  warpaffine.cu
source/deploy/pybind/: deploy.cpp  pybind.cpp
source/deploy/utils/: utils.cpp
source/deploy/vision/: cudaWarp.cu  detection.cpp  inference.cpp  visualize.cpp  warp_affine.cu  warpaffine.cu
tensorrt_yolo/: __init__.py  c_lib_wrap.py.in  cli.py
tensorrt_yolo/export/: __init__.py  head.py  ppyoloe.py
tensorrt_yolo/infer/: __init__.py  batcher.py  common.py  detection.py  general.py  inference.py  model.py  result.py  structs.py  timer.py  utils.py  visualize.py  yolo.py
tools/: README.en.md  README.md  calibration.yaml  ptq_calibration.py
trtyolo/: __init__.py  c_lib_wrap.py.in
trtyolo_export/: __init__.py  __main__.py  cli.py  head.py  log.py  model_io.py  pipeline.py  plugins.py  ppyoloe.py  types.py  utils.py
trtyolo_export/handlers/: __init__.py  handler_base.py  handler_classify.py  handler_common.py  handler_legacy.py  handler_nms_free.py
