[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project settings -----------------------------------------------------------------------------------------------------
[project]
dynamic = ["version"]
readme = "README.md"
name = "trtyolo-export"
requires-python = ">=3.8"
license = { file = "LICENSE" }
maintainers = [{ name = "laugh12321" }]
authors = [{ name = "laugh12321", email = "laugh12321@vip.qq.com" }]
description = "🛠️ TensorRT-YOLO official exporter: one-click ONNX convert for TensorRT-YOLO"
keywords = [
    "TensorRT-YOLO",
    "TensorRT",
    "ONNX",
    "YOLO",
    "exporter",
    "converter",
    "model-conversion",
    "computer-vision",
    "object-detection",
    "instance-segmentation",
    "pose-estimation",
    "rotated-object-detection",
    "image-classification",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Required dependencies ------------------------------------------------------------------------------------------------
dependencies = [
    "loguru",
    "numpy",
    "onnx<=1.19.1",
    "onnx_graphsurgeon",
    "onnxslim",
    "rich_click",
]

[project.urls]
"Bug Reports" = "https://github.com/laugh12321/TensorRT-YOLO/issues"
"Funding" = "https://github.com/laugh12321"
"Source" = "https://github.com/laugh12321/TensorRT-YOLO/tree/export"

[project.scripts]
trtyolo-export = "trtyolo_export.cli:main"

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trtyolo_export*"]

[tool.setuptools.dynamic]
version = { attr = "trtyolo_export.__version__" }

# Ruff settings -------------------------------------------------------------------------------------------------------
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "D", "T100"]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["trtyolo_export"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"
